trying to fix ios whitespace scroll

--- a/src/index.css
+++ b/src/index.css
@@ -42,12 +42,14 @@
 html {
   height: 100%;
   overflow: hidden;
+  overscroll-behavior: none;
 }
 
 body {
   margin: 0;
   padding: 0;
   height: 100%;
+  overscroll-behavior: none;
   font-family: var(--font-secondary);
   font-size: 16px;
   font-weight: 400;
